--- a/gruppi.tex
+++ b/gruppi.tex
@@ -357,7 +357,9 @@ z &\mapsto \mathcal{R}(O, \arg z)
 	Ogni sottogruppo $ H < \mathcal{S}_n $ è contenuto interamente in $ \mathcal{A}_n $ o viene spezzato a metà dal gruppo alterno. Questo perché possiamo restringere il determinante al solo $ H $, che dunque può spezzarsi in nucleo e laterale, o immergersi interamente nel nucleo.
 \end{remark}
 
-
+\begin{prop}[si spezzamento]
+	L classe di coniugio di $ \sigma $ in $ \S_n $ si spezza in $ \mathcal{A}_n $ se e solo se $ \sigma $ è composto da cicli di lunghezze dispari e distinte.
+\end{prop}
 
 
 
